--- a/client/package.json
+++ b/client/package.json
@@ -3,10 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^1.3.1",
+    "@material-ui/icons": "^1.1.0",
     "axios": "^0.18.0",
+    "bootstrap": "^4.1.1",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "reactstrap": "^6.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -15,5 +19,5 @@
     "eject": "react-scripts eject"
   },
   "proxy": "http://localhost:5000",
-  "secure":false
+  "secure": false
 }
