--- a/client/package.json
+++ b/client/package.json
@@ -5,14 +5,17 @@
   "dependencies": {
     "@material-ui/core": "^1.3.1",
     "@material-ui/icons": "^1.1.0",
+    "@material/card": "^0.37.0",
     "axios": "^0.18.0",
     "bootstrap": "^4.1.1",
     "chart.js": "^2.7.2",
     "highcharts": "^6.1.1",
+    "material-ui": "^0.20.1",
     "react": "^16.4.1",
     "react-chartjs-2": "^2.7.2",
     "react-dom": "^16.4.1",
     "react-scripts": "1.1.4",
+    "react-toolbox": "^2.0.0-beta.13",
     "reactstrap": "^6.2.0"
   },
   "scripts": {
