--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
   "author": "khizr ali pardhan",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.18.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "concurrently": "^3.6.0",
     "express": "^4.16.3",
+    "get-json": "^1.0.0",
     "mongoose": "^5.1.7",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
+    "request": "^2.87.0",
     "validator": "^10.4.0"
   }
 }
